estruturação do modelo

--- a/readme
+++ b/readme
@@ -3,9 +3,9 @@ Big Data e Deployment de Modelos I
 Foi criado um ambiente virtual próprio para essa aula, e rodado o documento requirements.txt, com o seguinte
 comando:
 
-pip install -r requirements.txt
+- pip install -r requirements.txt
 
 Após a instalação dos pacotes, será possível inicializar o MLFlow, basta rodar o comando:
 
-mlflow ui
+- mlflow ui
 
