Incrementação doso códigos

--- a/big-data-deploment-modelo1.ipynb
+++ b/big-data-deploment-modelo1.ipynb
@@ -8,16 +8,17 @@
    "source": [
     "#declaração das bibliotecas\n",
     "\n",
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "import mlflow\n",
     "import statsmodels.api as sm\n",
+    "import json\n",
     "import requests\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +115,7 @@
        "9     30         20"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +217,7 @@
        "max    55.00000  32.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,29 +229,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#treinando um modelo localmente\n",
     "\n",
     "modelo_nulo_local = sm.OLS.from_formula(\n",
-    "    formula=\"tempo ~ 1\", data=df_tempodist\n",
+    "    formula=\"tempo ~ distancia\", data=df_tempodist\n",
     ").fit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Documentos\\Projetos\\MBAdsa_bigdata_dp\\bigdata_deploymodelos\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:418: UserWarning: `kurtosistest` p-value may be inaccurate with fewer than 20 observations; only n=10 observations were given.\n",
+      "  return hypotest_fun_in(*args, **kwds)\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>          <td>tempo</td>      <th>  R-squared:         </th> <td>   0.819</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.797</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   36.30</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Thu, 24 Oct 2024</td> <th>  Prob (F-statistic):</th> <td>0.000314</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>23:24:37</td>     <th>  Log-Likelihood:    </th> <td> -32.123</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>    10</td>      <th>  AIC:               </th> <td>   68.25</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>     8</td>      <th>  BIC:               </th> <td>   68.85</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th> <td>    5.8784</td> <td>    4.532</td> <td>    1.297</td> <td> 0.231</td> <td>   -4.573</td> <td>   16.330</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>distancia</th> <td>    1.4189</td> <td>    0.235</td> <td>    6.025</td> <td> 0.000</td> <td>    0.876</td> <td>    1.962</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td> 1.016</td> <th>  Durbin-Watson:     </th> <td>   2.099</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.602</td> <th>  Jarque-Bera (JB):  </th> <td>   0.694</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.262</td> <th>  Prob(JB):          </th> <td>   0.707</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 1.820</td> <th>  Cond. No.          </th> <td>    41.1</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}    &      tempo       & \\textbf{  R-squared:         } &     0.819   \\\\\n",
+       "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.797   \\\\\n",
+       "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     36.30   \\\\\n",
+       "\\textbf{Date:}             & Thu, 24 Oct 2024 & \\textbf{  Prob (F-statistic):} &  0.000314   \\\\\n",
+       "\\textbf{Time:}             &     23:24:37     & \\textbf{  Log-Likelihood:    } &   -32.123   \\\\\n",
+       "\\textbf{No. Observations:} &          10      & \\textbf{  AIC:               } &     68.25   \\\\\n",
+       "\\textbf{Df Residuals:}     &           8      & \\textbf{  BIC:               } &     68.85   \\\\\n",
+       "\\textbf{Df Model:}         &           1      & \\textbf{                     } &             \\\\\n",
+       "\\textbf{Covariance Type:}  &    nonrobust     & \\textbf{                     } &             \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "                   & \\textbf{coef} & \\textbf{std err} & \\textbf{t} & \\textbf{P$> |$t$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{Intercept} &       5.8784  &        4.532     &     1.297  &         0.231        &       -4.573    &       16.330     \\\\\n",
+       "\\textbf{distancia} &       1.4189  &        0.235     &     6.025  &         0.000        &        0.876    &        1.962     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\textbf{Omnibus:}       &  1.016 & \\textbf{  Durbin-Watson:     } &    2.099  \\\\\n",
+       "\\textbf{Prob(Omnibus):} &  0.602 & \\textbf{  Jarque-Bera (JB):  } &    0.694  \\\\\n",
+       "\\textbf{Skew:}          & -0.262 & \\textbf{  Prob(JB):          } &    0.707  \\\\\n",
+       "\\textbf{Kurtosis:}      &  1.820 & \\textbf{  Cond. No.          } &     41.1  \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{OLS Regression Results}\n",
+       "\\end{center}\n",
+       "\n",
+       "Notes: \\newline\n",
+       " [1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
       "text/plain": [
-       "<bound method RegressionResults.summary of <statsmodels.regression.linear_model.OLSResults object at 0x0000028DC95AB830>>"
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                  tempo   R-squared:                       0.819\n",
+       "Model:                            OLS   Adj. R-squared:                  0.797\n",
+       "Method:                 Least Squares   F-statistic:                     36.30\n",
+       "Date:                Thu, 24 Oct 2024   Prob (F-statistic):           0.000314\n",
+       "Time:                        23:24:37   Log-Likelihood:                -32.123\n",
+       "No. Observations:                  10   AIC:                             68.25\n",
+       "Df Residuals:                       8   BIC:                             68.85\n",
+       "Df Model:                           1                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "Intercept      5.8784      4.532      1.297      0.231      -4.573      16.330\n",
+       "distancia      1.4189      0.235      6.025      0.000       0.876       1.962\n",
+       "==============================================================================\n",
+       "Omnibus:                        1.016   Durbin-Watson:                   2.099\n",
+       "Prob(Omnibus):                  0.602   Jarque-Bera (JB):                0.694\n",
+       "Skew:                          -0.262   Prob(JB):                        0.707\n",
+       "Kurtosis:                       1.820   Cond. No.                         41.1\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +386,46 @@
    "source": [
     "#veriicando seu output\n",
     "\n",
-    "modelo_nulo_local.summary"
+    "modelo_nulo_local.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Nesta parte inicializaremos o MLFLOW\n",
+    "\n",
+    "mlflow.set_tracking_uri(\"http://localhost:5000\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/10/24 23:27:45 INFO mlflow.tracking.fluent: Experiment with name 'Regressão Linear Simples - tempodist' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='mlflow-artifacts:/486145605123477232', creation_time=1729823265207, experiment_id='486145605123477232', last_update_time=1729823265207, lifecycle_stage='active', name='Regressão Linear Simples - tempodist', tags={}>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#criando nosso primeiro experimento\n",
+    "mlflow.set_experiment(experiment_name=\"Regressão Linear Simples - tempodist\")"
    ]
   },
   {
