--- a/big-data-deploment-modelo1.ipynb
+++ b/big-data-deploment-modelo1.ipynb
@@ -430,10 +430,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Definição dos inputs do Modelo \n",
+    "\n",
+    "#Modelo proposto: Modelo Nulo\n",
+    "\n",
+    "dataset = mlflow.data.from_pandas(df_tempodist)\n",
+    "#Fómula que será utilizada no modelo\n",
+    "formula = \"tempo ~ 1\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#criando o nosso primeiro experimento no mflow\n",
+    "with mlflow.start_run(run_name=\"Modelo Nulo\"):\n",
+    "    #Inputs\n",
+    "    mlflow.log_input(dataset, context=\"training\")\n",
+    "\n",
+    "    #Parâmetros de entrada para serem coletados\n",
+    "    mlflow.log_param(\"Fómula\", formula)\n",
+    "\n",
+    "    #Modelagem\n",
+    "    #Treinamento do modelo\n",
+    "    modelo_nulo = sm.OLS.from_formula(formula=formula, data=df_tempodist).fit()\n",
+    "\n",
+    "    #Outputs"
+   ]
   }
  ],
  "metadata": {
